parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> program_heading type_definition_part variable_declaration_part function_declaration_part compound_statement
Rule 3     program_heading -> PROGRAM identifier SEMICOLON
Rule 4     declaration_part -> type_definition_part variable_declaration_part function_declaration_part
Rule 5     block -> declaration_part statement_part
Rule 6     type_definition_part -> TYPE type_definition_list
Rule 7     type_definition_part -> empty
Rule 8     type_definition_list -> type_definition
Rule 9     type_definition_list -> type_definition type_definition_list
Rule 10    variable_declaration_part -> VAR variable_declaration_list
Rule 11    variable_declaration_part -> empty
Rule 12    function_declaration_part -> function_declaration function_declaration_part
Rule 13    function_declaration_part -> empty
Rule 14    function_declaration -> function_heading SEMICOLON block
Rule 15    function_heading -> FUNCTION identifier LPAREN parameters RPAREN COLON simple_type_name
Rule 16    parameters -> names_list COLON simple_type_name
Rule 17    parameters -> names_list COLON simple_type_name SEMICOLON parameters
Rule 18    names_list -> identifier
Rule 19    names_list -> identifier COMMA names_list
Rule 20    type_definition -> identifier EQ ARRAY LPARENARR INTEGER DD INTEGER RPARENARR OF simple_type_name SEMICOLON
Rule 21    statement_part -> compound_statement
Rule 22    statement_part -> assignment_list
Rule 23    statement_part -> while_statement
Rule 24    statement_part -> if_else_statement
Rule 25    statement_part -> expression
Rule 26    statement_part -> empty
Rule 27    while_statement -> WHILE expression DO statement_part
Rule 28    ending -> SEMICOLON
Rule 29    ending -> empty
Rule 30    if_else_statement -> IF expression THEN statement_part
Rule 31    if_else_statement -> IF expression THEN statement_part ELSE statement_part
Rule 32    compound_statement -> BEGIN statement_part END SEMICOLON
Rule 33    compound_statement -> BEGIN statement_part END DOT
Rule 34    assignment_list -> assignment statement_part
Rule 35    assignment -> identifier ASSIGNMENT expression ending
Rule 36    assignment -> identifier LPARENARR term RPARENARR ASSIGNMENT expression ending
Rule 37    expression -> term
Rule 38    expression -> expression sign term
Rule 39    expression -> expression and_or expression
Rule 40    and_or -> AND
Rule 41    and_or -> OR
Rule 42    sign -> PLUS
Rule 43    sign -> MINUS
Rule 44    sign -> EQ
Rule 45    sign -> NEQ
Rule 46    sign -> GT
Rule 47    sign -> LT
Rule 48    sign -> GTE
Rule 49    sign -> LTE
Rule 50    term -> integer
Rule 51    term -> real
Rule 52    term -> char
Rule 53    term -> string
Rule 54    term -> function_call
Rule 55    term -> identifier
Rule 56    integer -> INTEGER
Rule 57    real -> REAL
Rule 58    string -> STRING
Rule 59    char -> CHAR
Rule 60    function_call -> identifier LPAREN identifier_list RPAREN
Rule 61    variable_declaration_list -> variable_declaration
Rule 62    variable_declaration_list -> variable_declaration variable_declaration_list
Rule 63    variable_declaration -> identifier_list COLON simple_type_name SEMICOLON
Rule 64    variable_declaration -> identifier COLON simple_type_name SEMICOLON
Rule 65    variable_declaration -> identifier COLON identifier SEMICOLON
Rule 66    variable_declaration -> identifier COLON ARRAY LPARENARR INTEGER DD INTEGER RPARENARR OF simple_type_name SEMICOLON
Rule 67    identifier_list -> identifier COMMA identifier_list
Rule 68    identifier_list -> identifier COMMA identifier
Rule 69    identifier_list -> empty
Rule 70    simple_type_name -> SSTRING
Rule 71    simple_type_name -> SCHAR
Rule 72    simple_type_name -> SREAL
Rule 73    simple_type_name -> SINTEGER
Rule 74    simple_type_name -> identifier
Rule 75    identifier -> IDENTIFIER

Terminals, with rules where they appear

AND                  : 40
ARRAY                : 20 66
ASSIGNMENT           : 35 36
BEGIN                : 32 33
CHAR                 : 59
COLON                : 15 16 17 63 64 65 66
COMMA                : 19 67 68
DD                   : 20 66
DO                   : 27
DOT                  : 33
ELSE                 : 31
END                  : 32 33
EQ                   : 20 44
FUNCTION             : 15
GT                   : 46
GTE                  : 48
IDENTIFIER           : 75
IF                   : 30 31
INTEGER              : 20 20 56 66 66
LPAREN               : 15 60
LPARENARR            : 20 36 66
LT                   : 47
LTE                  : 49
MINUS                : 43
NEQ                  : 45
OF                   : 20 66
OR                   : 41
PLUS                 : 42
PROGRAM              : 3
REAL                 : 57
RPAREN               : 15 60
RPARENARR            : 20 36 66
SCHAR                : 71
SEMICOLON            : 3 14 17 20 28 32 63 64 65 66
SINTEGER             : 73
SREAL                : 72
SSTRING              : 70
STRING               : 58
THEN                 : 30 31
TYPE                 : 6
VAR                  : 10
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

and_or               : 39
assignment           : 34
assignment_list      : 22
block                : 14
char                 : 52
compound_statement   : 2 21
declaration_part     : 5
empty                : 7 11 13 26 29 69
ending               : 35 36
expression           : 25 27 30 31 35 36 38 39 39
function_call        : 54
function_declaration : 12
function_declaration_part : 2 4 12
function_heading     : 14
identifier           : 3 15 18 19 20 35 36 55 60 64 65 65 66 67 68 68 74
identifier_list      : 60 63 67
if_else_statement    : 24
integer              : 50
names_list           : 16 17 19
parameters           : 15 17
program              : 0
program_heading      : 2
real                 : 51
sign                 : 38
simple_type_name     : 15 16 17 20 63 64 66
statement_part       : 5 27 30 31 31 32 33 34
string               : 53
term                 : 36 37 38
type_definition      : 8 9
type_definition_list : 6 9
type_definition_part : 2 4
variable_declaration : 61 62
variable_declaration_list : 10 62
variable_declaration_part : 2 4
while_statement      : 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . program_heading type_definition_part variable_declaration_part function_declaration_part compound_statement
    (3) program_heading -> . PROGRAM identifier SEMICOLON

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    program_heading                shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (2) program -> program_heading . type_definition_part variable_declaration_part function_declaration_part compound_statement
    (6) type_definition_part -> . TYPE type_definition_list
    (7) type_definition_part -> . empty
    (1) empty -> .

    TYPE            shift and go to state 5
    VAR             reduce using rule 1 (empty -> .)
    FUNCTION        reduce using rule 1 (empty -> .)
    BEGIN           reduce using rule 1 (empty -> .)

    type_definition_part           shift and go to state 4
    empty                          shift and go to state 6

state 3

    (3) program_heading -> PROGRAM . identifier SEMICOLON
    (75) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 8

    identifier                     shift and go to state 7

state 4

    (2) program -> program_heading type_definition_part . variable_declaration_part function_declaration_part compound_statement
    (10) variable_declaration_part -> . VAR variable_declaration_list
    (11) variable_declaration_part -> . empty
    (1) empty -> .

    VAR             shift and go to state 10
    FUNCTION        reduce using rule 1 (empty -> .)
    BEGIN           reduce using rule 1 (empty -> .)

    variable_declaration_part      shift and go to state 9
    empty                          shift and go to state 11

state 5

    (6) type_definition_part -> TYPE . type_definition_list
    (8) type_definition_list -> . type_definition
    (9) type_definition_list -> . type_definition type_definition_list
    (20) type_definition -> . identifier EQ ARRAY LPARENARR INTEGER DD INTEGER RPARENARR OF simple_type_name SEMICOLON
    (75) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 8

    type_definition_list           shift and go to state 12
    type_definition                shift and go to state 13
    identifier                     shift and go to state 14

state 6

    (7) type_definition_part -> empty .

    VAR             reduce using rule 7 (type_definition_part -> empty .)
    FUNCTION        reduce using rule 7 (type_definition_part -> empty .)
    BEGIN           reduce using rule 7 (type_definition_part -> empty .)
    WHILE           reduce using rule 7 (type_definition_part -> empty .)
    IF              reduce using rule 7 (type_definition_part -> empty .)
    IDENTIFIER      reduce using rule 7 (type_definition_part -> empty .)
    INTEGER         reduce using rule 7 (type_definition_part -> empty .)
    REAL            reduce using rule 7 (type_definition_part -> empty .)
    CHAR            reduce using rule 7 (type_definition_part -> empty .)
    STRING          reduce using rule 7 (type_definition_part -> empty .)


state 7

    (3) program_heading -> PROGRAM identifier . SEMICOLON

    SEMICOLON       shift and go to state 15


state 8

    (75) identifier -> IDENTIFIER .

    SEMICOLON       reduce using rule 75 (identifier -> IDENTIFIER .)
    EQ              reduce using rule 75 (identifier -> IDENTIFIER .)
    COLON           reduce using rule 75 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 75 (identifier -> IDENTIFIER .)
    LPAREN          reduce using rule 75 (identifier -> IDENTIFIER .)
    ASSIGNMENT      reduce using rule 75 (identifier -> IDENTIFIER .)
    LPARENARR       reduce using rule 75 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 75 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 75 (identifier -> IDENTIFIER .)
    NEQ             reduce using rule 75 (identifier -> IDENTIFIER .)
    GT              reduce using rule 75 (identifier -> IDENTIFIER .)
    LT              reduce using rule 75 (identifier -> IDENTIFIER .)
    GTE             reduce using rule 75 (identifier -> IDENTIFIER .)
    LTE             reduce using rule 75 (identifier -> IDENTIFIER .)
    AND             reduce using rule 75 (identifier -> IDENTIFIER .)
    OR              reduce using rule 75 (identifier -> IDENTIFIER .)
    END             reduce using rule 75 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 75 (identifier -> IDENTIFIER .)
    BEGIN           reduce using rule 75 (identifier -> IDENTIFIER .)
    WHILE           reduce using rule 75 (identifier -> IDENTIFIER .)
    IF              reduce using rule 75 (identifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 75 (identifier -> IDENTIFIER .)
    INTEGER         reduce using rule 75 (identifier -> IDENTIFIER .)
    REAL            reduce using rule 75 (identifier -> IDENTIFIER .)
    CHAR            reduce using rule 75 (identifier -> IDENTIFIER .)
    STRING          reduce using rule 75 (identifier -> IDENTIFIER .)
    FUNCTION        reduce using rule 75 (identifier -> IDENTIFIER .)
    ELSE            reduce using rule 75 (identifier -> IDENTIFIER .)
    DO              reduce using rule 75 (identifier -> IDENTIFIER .)
    THEN            reduce using rule 75 (identifier -> IDENTIFIER .)
    RPARENARR       reduce using rule 75 (identifier -> IDENTIFIER .)


state 9

    (2) program -> program_heading type_definition_part variable_declaration_part . function_declaration_part compound_statement
    (12) function_declaration_part -> . function_declaration function_declaration_part
    (13) function_declaration_part -> . empty
    (14) function_declaration -> . function_heading SEMICOLON block
    (1) empty -> .
    (15) function_heading -> . FUNCTION identifier LPAREN parameters RPAREN COLON simple_type_name

    BEGIN           reduce using rule 1 (empty -> .)
    FUNCTION        shift and go to state 20

    function_declaration_part      shift and go to state 16
    function_declaration           shift and go to state 17
    empty                          shift and go to state 18
    function_heading               shift and go to state 19

state 10

    (10) variable_declaration_part -> VAR . variable_declaration_list
    (61) variable_declaration_list -> . variable_declaration
    (62) variable_declaration_list -> . variable_declaration variable_declaration_list
    (63) variable_declaration -> . identifier_list COLON simple_type_name SEMICOLON
    (64) variable_declaration -> . identifier COLON simple_type_name SEMICOLON
    (65) variable_declaration -> . identifier COLON identifier SEMICOLON
    (66) variable_declaration -> . identifier COLON ARRAY LPARENARR INTEGER DD INTEGER RPARENARR OF simple_type_name SEMICOLON
    (67) identifier_list -> . identifier COMMA identifier_list
    (68) identifier_list -> . identifier COMMA identifier
    (69) identifier_list -> . empty
    (75) identifier -> . IDENTIFIER
    (1) empty -> .

    IDENTIFIER      shift and go to state 8
    COLON           reduce using rule 1 (empty -> .)

    variable_declaration_list      shift and go to state 21
    variable_declaration           shift and go to state 22
    identifier_list                shift and go to state 23
    identifier                     shift and go to state 24
    empty                          shift and go to state 25

state 11

    (11) variable_declaration_part -> empty .

    FUNCTION        reduce using rule 11 (variable_declaration_part -> empty .)
    BEGIN           reduce using rule 11 (variable_declaration_part -> empty .)
    WHILE           reduce using rule 11 (variable_declaration_part -> empty .)
    IF              reduce using rule 11 (variable_declaration_part -> empty .)
    IDENTIFIER      reduce using rule 11 (variable_declaration_part -> empty .)
    INTEGER         reduce using rule 11 (variable_declaration_part -> empty .)
    REAL            reduce using rule 11 (variable_declaration_part -> empty .)
    CHAR            reduce using rule 11 (variable_declaration_part -> empty .)
    STRING          reduce using rule 11 (variable_declaration_part -> empty .)


state 12

    (6) type_definition_part -> TYPE type_definition_list .

    VAR             reduce using rule 6 (type_definition_part -> TYPE type_definition_list .)
    FUNCTION        reduce using rule 6 (type_definition_part -> TYPE type_definition_list .)
    BEGIN           reduce using rule 6 (type_definition_part -> TYPE type_definition_list .)
    WHILE           reduce using rule 6 (type_definition_part -> TYPE type_definition_list .)
    IF              reduce using rule 6 (type_definition_part -> TYPE type_definition_list .)
    IDENTIFIER      reduce using rule 6 (type_definition_part -> TYPE type_definition_list .)
    INTEGER         reduce using rule 6 (type_definition_part -> TYPE type_definition_list .)
    REAL            reduce using rule 6 (type_definition_part -> TYPE type_definition_list .)
    CHAR            reduce using rule 6 (type_definition_part -> TYPE type_definition_list .)
    STRING          reduce using rule 6 (type_definition_part -> TYPE type_definition_list .)


state 13

    (8) type_definition_list -> type_definition .
    (9) type_definition_list -> type_definition . type_definition_list
    (8) type_definition_list -> . type_definition
    (9) type_definition_list -> . type_definition type_definition_list
    (20) type_definition -> . identifier EQ ARRAY LPARENARR INTEGER DD INTEGER RPARENARR OF simple_type_name SEMICOLON
    (75) identifier -> . IDENTIFIER

  ! shift/reduce conflict for IDENTIFIER resolved as shift
    VAR             reduce using rule 8 (type_definition_list -> type_definition .)
    FUNCTION        reduce using rule 8 (type_definition_list -> type_definition .)
    BEGIN           reduce using rule 8 (type_definition_list -> type_definition .)
    WHILE           reduce using rule 8 (type_definition_list -> type_definition .)
    IF              reduce using rule 8 (type_definition_list -> type_definition .)
    INTEGER         reduce using rule 8 (type_definition_list -> type_definition .)
    REAL            reduce using rule 8 (type_definition_list -> type_definition .)
    CHAR            reduce using rule 8 (type_definition_list -> type_definition .)
    STRING          reduce using rule 8 (type_definition_list -> type_definition .)
    IDENTIFIER      shift and go to state 8

  ! IDENTIFIER      [ reduce using rule 8 (type_definition_list -> type_definition .) ]

    type_definition                shift and go to state 13
    type_definition_list           shift and go to state 26
    identifier                     shift and go to state 14

state 14

    (20) type_definition -> identifier . EQ ARRAY LPARENARR INTEGER DD INTEGER RPARENARR OF simple_type_name SEMICOLON

    EQ              shift and go to state 27


state 15

    (3) program_heading -> PROGRAM identifier SEMICOLON .

    TYPE            reduce using rule 3 (program_heading -> PROGRAM identifier SEMICOLON .)
    VAR             reduce using rule 3 (program_heading -> PROGRAM identifier SEMICOLON .)
    FUNCTION        reduce using rule 3 (program_heading -> PROGRAM identifier SEMICOLON .)
    BEGIN           reduce using rule 3 (program_heading -> PROGRAM identifier SEMICOLON .)


state 16

    (2) program -> program_heading type_definition_part variable_declaration_part function_declaration_part . compound_statement
    (32) compound_statement -> . BEGIN statement_part END SEMICOLON
    (33) compound_statement -> . BEGIN statement_part END DOT

    BEGIN           shift and go to state 29

    compound_statement             shift and go to state 28

state 17

    (12) function_declaration_part -> function_declaration . function_declaration_part
    (12) function_declaration_part -> . function_declaration function_declaration_part
    (13) function_declaration_part -> . empty
    (14) function_declaration -> . function_heading SEMICOLON block
    (1) empty -> .
    (15) function_heading -> . FUNCTION identifier LPAREN parameters RPAREN COLON simple_type_name

  ! shift/reduce conflict for FUNCTION resolved as shift
    BEGIN           reduce using rule 1 (empty -> .)
    WHILE           reduce using rule 1 (empty -> .)
    IF              reduce using rule 1 (empty -> .)
    IDENTIFIER      reduce using rule 1 (empty -> .)
    INTEGER         reduce using rule 1 (empty -> .)
    REAL            reduce using rule 1 (empty -> .)
    CHAR            reduce using rule 1 (empty -> .)
    STRING          reduce using rule 1 (empty -> .)
    FUNCTION        shift and go to state 20

  ! FUNCTION        [ reduce using rule 1 (empty -> .) ]

    function_declaration           shift and go to state 17
    function_declaration_part      shift and go to state 30
    empty                          shift and go to state 18
    function_heading               shift and go to state 19

state 18

    (13) function_declaration_part -> empty .

    BEGIN           reduce using rule 13 (function_declaration_part -> empty .)
    WHILE           reduce using rule 13 (function_declaration_part -> empty .)
    IF              reduce using rule 13 (function_declaration_part -> empty .)
    IDENTIFIER      reduce using rule 13 (function_declaration_part -> empty .)
    INTEGER         reduce using rule 13 (function_declaration_part -> empty .)
    REAL            reduce using rule 13 (function_declaration_part -> empty .)
    CHAR            reduce using rule 13 (function_declaration_part -> empty .)
    STRING          reduce using rule 13 (function_declaration_part -> empty .)
    FUNCTION        reduce using rule 13 (function_declaration_part -> empty .)


state 19

    (14) function_declaration -> function_heading . SEMICOLON block

    SEMICOLON       shift and go to state 31


state 20

    (15) function_heading -> FUNCTION . identifier LPAREN parameters RPAREN COLON simple_type_name
    (75) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 8

    identifier                     shift and go to state 32

state 21

    (10) variable_declaration_part -> VAR variable_declaration_list .

    FUNCTION        reduce using rule 10 (variable_declaration_part -> VAR variable_declaration_list .)
    BEGIN           reduce using rule 10 (variable_declaration_part -> VAR variable_declaration_list .)
    WHILE           reduce using rule 10 (variable_declaration_part -> VAR variable_declaration_list .)
    IF              reduce using rule 10 (variable_declaration_part -> VAR variable_declaration_list .)
    IDENTIFIER      reduce using rule 10 (variable_declaration_part -> VAR variable_declaration_list .)
    INTEGER         reduce using rule 10 (variable_declaration_part -> VAR variable_declaration_list .)
    REAL            reduce using rule 10 (variable_declaration_part -> VAR variable_declaration_list .)
    CHAR            reduce using rule 10 (variable_declaration_part -> VAR variable_declaration_list .)
    STRING          reduce using rule 10 (variable_declaration_part -> VAR variable_declaration_list .)


state 22

    (61) variable_declaration_list -> variable_declaration .
    (62) variable_declaration_list -> variable_declaration . variable_declaration_list
    (61) variable_declaration_list -> . variable_declaration
    (62) variable_declaration_list -> . variable_declaration variable_declaration_list
    (63) variable_declaration -> . identifier_list COLON simple_type_name SEMICOLON
    (64) variable_declaration -> . identifier COLON simple_type_name SEMICOLON
    (65) variable_declaration -> . identifier COLON identifier SEMICOLON
    (66) variable_declaration -> . identifier COLON ARRAY LPARENARR INTEGER DD INTEGER RPARENARR OF simple_type_name SEMICOLON
    (67) identifier_list -> . identifier COMMA identifier_list
    (68) identifier_list -> . identifier COMMA identifier
    (69) identifier_list -> . empty
    (75) identifier -> . IDENTIFIER
    (1) empty -> .

  ! shift/reduce conflict for IDENTIFIER resolved as shift
    FUNCTION        reduce using rule 61 (variable_declaration_list -> variable_declaration .)
    BEGIN           reduce using rule 61 (variable_declaration_list -> variable_declaration .)
    WHILE           reduce using rule 61 (variable_declaration_list -> variable_declaration .)
    IF              reduce using rule 61 (variable_declaration_list -> variable_declaration .)
    INTEGER         reduce using rule 61 (variable_declaration_list -> variable_declaration .)
    REAL            reduce using rule 61 (variable_declaration_list -> variable_declaration .)
    CHAR            reduce using rule 61 (variable_declaration_list -> variable_declaration .)
    STRING          reduce using rule 61 (variable_declaration_list -> variable_declaration .)
    IDENTIFIER      shift and go to state 8
    COLON           reduce using rule 1 (empty -> .)

  ! IDENTIFIER      [ reduce using rule 61 (variable_declaration_list -> variable_declaration .) ]

    variable_declaration           shift and go to state 22
    variable_declaration_list      shift and go to state 33
    identifier_list                shift and go to state 23
    identifier                     shift and go to state 24
    empty                          shift and go to state 25

state 23

    (63) variable_declaration -> identifier_list . COLON simple_type_name SEMICOLON

    COLON           shift and go to state 34


state 24

    (64) variable_declaration -> identifier . COLON simple_type_name SEMICOLON
    (65) variable_declaration -> identifier . COLON identifier SEMICOLON
    (66) variable_declaration -> identifier . COLON ARRAY LPARENARR INTEGER DD INTEGER RPARENARR OF simple_type_name SEMICOLON
    (67) identifier_list -> identifier . COMMA identifier_list
    (68) identifier_list -> identifier . COMMA identifier

    COLON           shift and go to state 35
    COMMA           shift and go to state 36


state 25

    (69) identifier_list -> empty .

    COLON           reduce using rule 69 (identifier_list -> empty .)
    RPAREN          reduce using rule 69 (identifier_list -> empty .)


state 26

    (9) type_definition_list -> type_definition type_definition_list .

    VAR             reduce using rule 9 (type_definition_list -> type_definition type_definition_list .)
    FUNCTION        reduce using rule 9 (type_definition_list -> type_definition type_definition_list .)
    BEGIN           reduce using rule 9 (type_definition_list -> type_definition type_definition_list .)
    WHILE           reduce using rule 9 (type_definition_list -> type_definition type_definition_list .)
    IF              reduce using rule 9 (type_definition_list -> type_definition type_definition_list .)
    IDENTIFIER      reduce using rule 9 (type_definition_list -> type_definition type_definition_list .)
    INTEGER         reduce using rule 9 (type_definition_list -> type_definition type_definition_list .)
    REAL            reduce using rule 9 (type_definition_list -> type_definition type_definition_list .)
    CHAR            reduce using rule 9 (type_definition_list -> type_definition type_definition_list .)
    STRING          reduce using rule 9 (type_definition_list -> type_definition type_definition_list .)


state 27

    (20) type_definition -> identifier EQ . ARRAY LPARENARR INTEGER DD INTEGER RPARENARR OF simple_type_name SEMICOLON

    ARRAY           shift and go to state 37


state 28

    (2) program -> program_heading type_definition_part variable_declaration_part function_declaration_part compound_statement .

    $end            reduce using rule 2 (program -> program_heading type_definition_part variable_declaration_part function_declaration_part compound_statement .)


state 29

    (32) compound_statement -> BEGIN . statement_part END SEMICOLON
    (33) compound_statement -> BEGIN . statement_part END DOT
    (21) statement_part -> . compound_statement
    (22) statement_part -> . assignment_list
    (23) statement_part -> . while_statement
    (24) statement_part -> . if_else_statement
    (25) statement_part -> . expression
    (26) statement_part -> . empty
    (32) compound_statement -> . BEGIN statement_part END SEMICOLON
    (33) compound_statement -> . BEGIN statement_part END DOT
    (34) assignment_list -> . assignment statement_part
    (27) while_statement -> . WHILE expression DO statement_part
    (30) if_else_statement -> . IF expression THEN statement_part
    (31) if_else_statement -> . IF expression THEN statement_part ELSE statement_part
    (37) expression -> . term
    (38) expression -> . expression sign term
    (39) expression -> . expression and_or expression
    (1) empty -> .
    (35) assignment -> . identifier ASSIGNMENT expression ending
    (36) assignment -> . identifier LPARENARR term RPARENARR ASSIGNMENT expression ending
    (50) term -> . integer
    (51) term -> . real
    (52) term -> . char
    (53) term -> . string
    (54) term -> . function_call
    (55) term -> . identifier
    (75) identifier -> . IDENTIFIER
    (56) integer -> . INTEGER
    (57) real -> . REAL
    (59) char -> . CHAR
    (58) string -> . STRING
    (60) function_call -> . identifier LPAREN identifier_list RPAREN

    BEGIN           shift and go to state 29
    WHILE           shift and go to state 46
    IF              shift and go to state 47
    END             reduce using rule 1 (empty -> .)
    IDENTIFIER      shift and go to state 8
    INTEGER         shift and go to state 55
    REAL            shift and go to state 56
    CHAR            shift and go to state 57
    STRING          shift and go to state 58

    statement_part                 shift and go to state 38
    compound_statement             shift and go to state 39
    assignment_list                shift and go to state 40
    while_statement                shift and go to state 41
    if_else_statement              shift and go to state 42
    expression                     shift and go to state 43
    empty                          shift and go to state 44
    assignment                     shift and go to state 45
    term                           shift and go to state 48
    identifier                     shift and go to state 49
    integer                        shift and go to state 50
    real                           shift and go to state 51
    char                           shift and go to state 52
    string                         shift and go to state 53
    function_call                  shift and go to state 54

state 30

    (12) function_declaration_part -> function_declaration function_declaration_part .
